[package]
name = "lemon"
version = "4.3.1"
authors = ["mendess <pedro.mendes.26@gmail.com>"]
edition = "2021"
default-run = "lemon"

[dependencies]
arc-swap = "1.5.1"
array-init = "2"
chrono = "0.4"
clap = { version = "4.4.6", features = ["derive"] }
derive_builder = "0.10"
enum-iterator = "0.6"
env_logger = "0.8"
futures = "0.3"
glob = "0.3"
itertools = "0.10"
log = "0.4"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
unzip-n = "0.1"
whoami = "1.1.5"
xrandr = "0.2.0"

[dependencies.mlib]
git = "https://github.com/mendess/m"
features = ["player"]
default-features = false
rev = "bbef279f2f1c5beea70c5f9003c82961faa22a86"

[dependencies.tokio]
version = "1"
features = [ "sync", "rt", "rt-multi-thread", "net", "signal", "process", "time", "macros", "io-util", "io-std" ]

[dependencies.hyprland]
git = "https://github.com/mendess/hyprland-rs"
branch = "mendess/workspace-rename-event"
optional = true

[features]
default = ["hyprland"]
hyprland = ["dep:hyprland"]
